<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".setting.MainSettingFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/currencyOptionButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/CurrencyDefault"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/currencyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textColor="#993C3C43"
                android:text="@string/Ruble"/>

            <ImageView
                android:layout_width="14dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                app:tint="#993C3C43" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/notSelectedOBS"/>

        <LinearLayout
            android:id="@+id/currencyModeButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/OptionShowModeCurrency"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/modeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textColor="#993C3C43"
                android:text="@string/Simple"/>

            <ImageView
                android:layout_width="14dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                app:tint="#993C3C43" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/notSelectedOBS"/>

        <LinearLayout
            android:id="@+id/countOFSumma"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/SummaDefault"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/summaDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:spinnerMode="dialog"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/notSelectedOBS"/>

        <LinearLayout
            android:id="@+id/notificationSwitch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Notification"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/notificationSwitcher"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:shadowColor="@color/selectedOBS"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/notSelectedOBS"/>

        <LinearLayout
            android:id="@+id/themeSwitch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitcher"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:shadowColor="@color/selectedOBS"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/notSelectedOBS"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ChangeLanguageApp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/changeLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:spinnerMode="dialog"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/notSelectedOBS"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="70dp"
            android:background="@color/notSelectedOBS"/>

        <LinearLayout
            android:id="@+id/writeInTelegram"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_logos_telegram"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/WriteInTelegram"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:textColor="#007AFF"
                android:textSize="17sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/notSelectedOBS"/>

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#208FB7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/Setting"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>