<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnBoardingThird">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/StepSecondFromThird"
            android:textColor="#979797"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="57dp"
            android:fontFamily="@font/roboto_bold"
            android:lineHeight="28.8dp"
            android:text="@string/chooseModeShowingCurrency"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="64dp"
            android:text="@string/WeCanChangeThisLaterInSetting"
            android:fontFamily="@font/roboto"
            android:lineHeight="18dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onBoardingThirdButton" />


        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/SimpleMode"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/simpleMode"
            app:layout_constraintTop_toBottomOf="@id/simpleMode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/LongMode"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/longMode"
            app:layout_constraintTop_toBottomOf="@id/longMode" />

        <androidx.cardview.widget.CardView
            android:id="@+id/onBoardingThirdButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="100dp"
            app:cardBackgroundColor="#2D996E"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/longMode"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:lineHeight="22dp"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/longMode"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="2dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text5"
            app:strokeColor="@color/notSelectedOBS"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/longModeChecked"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_check"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/qwer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/Currency"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@id/textKurs"
                        app:layout_constraintStart_toStartOf="@id/textKurs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/Buy"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/textKurs"
                        app:layout_constraintEnd_toStartOf="@+id/qwer"
                        app:layout_constraintStart_toEndOf="@+id/qwer1" />

                    <TextView
                        android:id="@+id/qwer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="3dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/Sale"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@id/textKurs"
                        app:layout_constraintEnd_toEndOf="@id/textKurs" />

                    <TextView
                        android:id="@+id/textKurs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="1 RUB  →  0.1350   0.1380 "
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="normal|bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/simpleMode"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="2dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:strokeColor="@color/notSelectedOBS"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/simpleModeChecked"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_check"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/roboto_medium"
                    android:lineHeight="22dp"
                    android:text="1 RUB   →   0.1380 TJS"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal|bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>